fix unreadable links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,7 @@ a {
 }
 
 a:visited {
-	color: #004346;
+	color: #508991;
 }
 
 code {
